# azure-functions-extension-bundles

./: .gitignore  CODEOWNERS  ExtensionBundle.Tests.sln  NOTICE.txt  README.md  azure-pipelines.yml  global.json  save.md  validate-ci.ps1
tests/: pyproject.toml  pytest.ini  requirements.txt  test_setup.py  test_wait_for_server.py  validate-ci.ps1
tests/ExtensionBundle.Tests/: DependencyValidationTests.cs  ExtensionBundle.Tests.csproj  Fixture.cs
tests/ExtensionBundle.Tests/TestData/: any_any_extensions.deps.json  linux_x64_extensions.deps.json  win_x64_extensions.deps.json  win_x86_extensions.deps.json
tests/emulator_tests/: README.md  pip.conf  test_blob_functions.py  test_connectivity.py  test_connector_functions.py  test_cosmosdb_functions.py  test_durable_functions.py  test_eventgrid_functions.py  test_eventhub_batch_functions.py  test_eventhub_functions.py  test_fabric_functions.py  test_kafka_functions.py  test_mcp_functions.py  test_mysql_functions.py  test_queue_functions.py  test_rabbitmq_functions.py  test_redis_functions.py  test_servicebus_functions.py  test_signalr_functions.py  test_sql_functions.py  test_table_functions.py  test_webpubsub_functions.py
tests/emulator_tests/blob_functions/: function_app.py  webhost_config.txt
tests/emulator_tests/blob_functions/blob_functions_stein/: function_app.py
tests/emulator_tests/blob_functions/get_blob_as_bytes_return_http_response/: main.py
tests/emulator_tests/blob_functions/get_blob_as_bytes_stream_return_http_response/: main.py
tests/emulator_tests/blob_functions/get_blob_as_str_return_http_response/: main.py
tests/emulator_tests/blob_functions/put_blob_as_bytes_return_http_response/: main.py
tests/emulator_tests/blob_functions/put_blob_as_str_return_http_response/: main.py
tests/emulator_tests/blob_functions/put_get_multiple_blobs_as_bytes_return_http_response/: main.py
tests/emulator_tests/connector_functions/: function_app.py
tests/emulator_tests/cosmosdb_functions/: cosmos_test_utils.py  function_app.py
tests/emulator_tests/durable_functions/: function_app.py
tests/emulator_tests/eventgrid_functions/: function_app.py
tests/emulator_tests/eventhub_batch_functions/: function_app.py
tests/emulator_tests/eventhub_functions/: function_app.py
tests/emulator_tests/fabric_functions/: function_app.py
tests/emulator_tests/kafka_functions/: function_app.py
tests/emulator_tests/mcp_functions/: function_app.py
tests/emulator_tests/mysql_functions/: function_app.py  mysql_test_utils.py
tests/emulator_tests/mysql_functions/mysql_trigger/: __init__.py  function.json
tests/emulator_tests/mysql_functions/put_mysql_trigger/: main.py
tests/emulator_tests/queue_functions/: function_app.py  webhost_config.txt
tests/emulator_tests/rabbitmq_functions/: function_app.py
tests/emulator_tests/redis_functions/: function_app.py
tests/emulator_tests/servicebus_functions/: function_app.py
tests/emulator_tests/signalr_functions/: function_app.py
tests/emulator_tests/sql_functions/: connection_utils.py  function_app.py  sql_test_utils.py  webhost_config.txt
tests/emulator_tests/table_functions/: function_app.py  webhost_config.txt
tests/emulator_tests/utils/dts/: docker-compose.yml
tests/emulator_tests/utils/eventhub/: config.json  docker-compose.yml
tests/emulator_tests/utils/kafka/: docker-compose.yml
tests/emulator_tests/utils/mysql/: docker-compose.yml
tests/emulator_tests/utils/sql/: init-db.sql  (+1 more)
tests/emulator_tests/webpubsub_functions/: function_app.py
tests/emulator_tests/webpubsub_functions_custom_only/: function_app.py
tests/emulator_tests/webpubsub_functions_identity/: function_app.py
tests/utils/: constants.py  testutils.py  testutils_docker.py  testutils_lc.py
(+50 files in other folders)
